# esp-idf-r503

./: CMakeLists.txt  README.md
components/r503/: CMakeLists.txt  LICENSE  README.md  idf_component.yml
components/r503/include/: r503.h  r503_defs.h  r503_errors.h  r503_types.h
components/r503/src/: r503.c  r503_core.c  r503_highlevel.c  r503_info.c  r503_led.c  r503_packet.c  r503_priv.h  r503_template.c  r503_uart.c
examples/aura_led_demo/: CMakeLists.txt  README.md
examples/aura_led_demo/main/: main.c
examples/auto_enroll_identify/: CMakeLists.txt
examples/auto_enroll_identify/main/: main.c
examples/basic_info/: CMakeLists.txt  README.md
examples/basic_info/main/: main.c
examples/delete_templates/: CMakeLists.txt  README.md
examples/delete_templates/main/: main.c
examples/manual_enroll_identify/: CMakeLists.txt  README.md
examples/manual_enroll_identify/main/: main.c
main/: main.c
